--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
     </div>
 </div>
 <div class="container-fluid background-secondary" id="connecting-dots">
+    <div class="section-nav row">
+        <div class="col-12 d-flex justify-content-between p-5">
+            <img src="./img/logo-white.png" alt="ipaladin logo" class="logo-nav">
+            <i class="fas fa-bars hamburger-menu"></i>
+        </div>
+    </div>
     <div class="row">
         <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
-            <div class="mt-first-section">
+            <div class="mt-5">
                 <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
                 <ul class="list-unstyled">
                     <li class="sidebar-item">Connecting Dots</li>
@@ -58,16 +64,17 @@
                 <a href="#" class="btn btn-info sign-in inverted">SIGN IN</a>
             </div>
         </div>
-        <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
-            <div class="mt-first-section">
+        <div class="col-12 col-md-10 text-left full-height d-flex flex-column position-relative">
+            <div class="mt-5">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 pb-5">
                         <h2 class="secondary-title">You click the keys... iPaladin connects and protects your dots</h2>
                         <h2 class="secondary-title mb-5">What are dots?</h2>
-                        <p>
+                        <p class="subhead">
                             Millions of separate communication threads, individual
                             documents, isolated actions and decisions. Every daily, offices consistently add a blizzard of new dots to their digital landscape, exacerbating their current information- overload problem. Fused together, these random dots are normally the only recorded evidence  of a business’s intelligence.
-
+                        </p>
+                        <p class="subhead mb-5">
                             For the cost of a single human archivist, iPaladin can be implemented as an inerrant,  perpetual solution. It never  requires time off or retires to properly connect and protect your dots.
                         </p>
                     </div>
@@ -77,6 +84,12 @@
     </div>
 </div>
 <div class="container-fluid background-secondary-two">
+    <div class="section-nav row">
+        <div class="col-12 d-flex justify-content-between p-5">
+            <img src="./img/logo-white.png" alt="ipaladin logo" class="logo-nav">
+            <i class="fas fa-bars hamburger-menu"></i>
+        </div>
+    </div>
     <div class="row">
         <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
             <div class="mt-first-section">
@@ -93,27 +106,27 @@
             </div>
         </div>
         <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
-            <div class="mt-first-section">
+            <div class="mb-5">
                 <div class="row">
                     <div class="col-12">
                         <ul class="nav nav-pills mb-3 d-flex justify-content-between" id="pills-tab" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-problem" role="tab" aria-controls="pills-problem" aria-selected="true">
-                                    <h2 class="section-title">
+                                    <h2 class="secondary-title">
                                         Problem
                                     </h2>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-solution" role="tab" aria-controls="pills-solution" aria-selected="false">
-                                    <h2 class="section-title">
+                                    <h2 class="secondary-title">
                                         Solution
                                     </h2>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-pathway" role="tab" aria-controls="pills-pathway" aria-selected="false">
-                                    <h2 class="section-title">
+                                    <h2 class="secondary-title">
                                         Pathway to Change
                                     </h2>
                                 </a>
@@ -122,8 +135,8 @@
                         <div class="tab-content" id="pills-tabContent">
                             <div class="tab-pane fade show active" id="pills-problem" role="tabpanel" aria-labelledby="pills-problem-tab">
                                 <div class="row">
-                                    <div class="col-12">
-                                        <p>
+                                    <div class="col-12 text-left pb-5">
+                                        <p class="subhead">
                                             Built from the ground up and subjected to rigorous testing for the past ten years, iPaladin's smart blockchain technology connects the dots.  It weaves together every sliver of communication threads, work items and documents within your office landscape.
 
                                             iPaladin serves as your advocate - your permanent archivist.
@@ -131,6 +144,10 @@
 
                                             Once your dots are organized as knowledged, you extract intelligence. How? When you are ready, model a client-focused structure of your business, coordinate the team around required operations and information, assign the work to gain group consensus and get going.  iPaladin eliminates pain points truggered by the needles blocking and tackling that's required to manually reassemble business knowledge.
                                         </p>
+                                        <p class="subhead emphasis my-4">
+                                            Learn about our history
+                                        </p>
+                                        <a href="#" class="btn btn-info sign-in inverted col-12 mb-5">SEE OUR EXPERIENCE</a>
                                     </div>
                                 </div>
                             </div>
@@ -158,6 +175,12 @@
     </div>
 </div>
 <div class="container-fluid background-secondary-three">
+    <div class="section-nav row">
+        <div class="col-12 d-flex justify-content-between p-5">
+            <img src="./img/logo-white.png" alt="ipaladin logo" class="logo-nav">
+            <i class="fas fa-bars hamburger-menu"></i>
+        </div>
+    </div>
     <div class="row">
         <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
             <div class="mt-first-section">
@@ -174,27 +197,27 @@
             </div>
         </div>
         <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
-            <div class="mt-first-section">
+            <div class="mb-5">
                 <div class="row">
-                    <div class="col-12">
-                        <ul class="nav nav-pills mb-3 d-flex justify-content-between" id="pills-video-tab" role="tablist">
+                    <div class="col-12 pb-5">
+                        <ul class="nav nav-pills mb-5 d-flex justify-content-between " id="pills-video-tab" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" id="pills-cybersecurity-tab" data-toggle="pill" href="#pills-cybersecurit" role="tab" aria-controls="pills-cybersecurit" aria-selected="true">
-                                    <h2 class="section-title">
+                                    <h2 class="secondary-title">
                                         Cybersecurity
                                     </h2>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="pills-dataprivacy-tab" data-toggle="pill" href="#pills-dataprivacy" role="tab" aria-controls="pills-dataprivacy" aria-selected="false">
-                                    <h2 class="section-title">
+                                    <h2 class="secondary-title">
                                         Data Privacy
                                     </h2>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="pills-data-ownership-tab" data-toggle="pill" href="#pills-dataownership" role="tab" aria-controls="pills-dataownership" aria-selected="false">
-                                    <h2 class="section-title">
+                                    <h2 class="secondary-title">
                                         Data ownership
                                     </h2>
                                 </a>
@@ -237,6 +260,12 @@
 </div>
 
 <div class="container-fluid background-primary">
+    <div class="section-nav row">
+        <div class="col-12 d-flex justify-content-between p-5">
+            <img src="./img/logo-blue.png" alt="ipaladin logo" class="logo-nav">
+            <i class="fas fa-bars hamburger-menu"></i>
+        </div>
+    </div>
     <div class="row">
         <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
             <div class="mt-first-section">
@@ -253,26 +282,43 @@
             </div>
         </div>
         <div class="col-12 col-md-10 text-left full-height d-flex flex-column position-relative">
-            <div class="mt-first-section">
-                <div class="row">
-                    <div class="col-12 col-md-4 px-5">
-                        Request a demo or ask for more information
+            <div class="mb-5">
+                <div class="row mt-5">
+                    <div class="col-12 col-md-4 px-5 text-left">
+                        <h2 class="secondary-title mb-5">
+                            Request a demo or ask for more information
+                        </h2>
                         <form action="">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">Send E-mail</label>
+                                <input class="form-check-input" checked type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label subhead" for="inlineRadio1">Send E-mail</label>
                             </div>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                                <label class="form-check-label" for="inlineRadio2">Call me back</label>
+                                <label class="form-check-label subhead" for="inlineRadio2">Call me back</label>
                             </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control custom-input" id="name" aria-describedby="emailHelp" placeholder="Name">
-                                <input type="email" class="form-control custom-input" id="email" aria-describedby="emailHelp" placeholder="Email">
-                                <input type="email" class="form-control custom-input" id="messgae" aria-describedby="emailHelp" placeholder="Message">
+                            <div class="form-group mt-5">
+                                <input type="email" class="form-control custom-input subhead light mb-4 mt-4 pb-3" id="name" aria-describedby="emailHelp" placeholder="Name">
+                                <input type="email" class="form-control custom-input subhead light mb-4 pb-3" id="email" aria-describedby="emailHelp" placeholder="Email">
+                                <input type="email" class="form-control custom-input subhead light mb-4 pb-3" id="messgae" aria-describedby="emailHelp" placeholder="Message">
                             </div>
-                            <a href="#" class="btn btn-info sign-in col-12">SEND</a>
+                            <a href="#" class="btn btn-info sign-in col-12 mt-5">SEND</a>
                         </form>
+                        <div class="contact-info mt-5">
+                            <p class="subhead">
+                                813-616-5950 <br>
+                                813-513-9938 (fax)
+                            </p>
+                            <p class="subhead">
+                                info@ipaladin.com <br>
+                                support@ipaladin.com
+                            </p>
+                            <p class="subhead">
+                                iPaladin, LLC <br>
+                                202 South Rome Avenue, Suite 150 <br>
+                                Tampa, Florida 33606 <br>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
